--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+common = { path = "../common" }
+tonic = "0.4"
+tokio = { version = "1.5", features = ["rt-multi-thread"] }
