--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 
 [dependencies]
 common = { path = "../common" }
+log = "0.4"
 tonic = "0.4"
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
