--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 common = { path = "../common" }
+log = "0.4"
 tonic = "0.4"
 tonic-reflection = "0.1"
 prost = "0.7"
