Packet stream now uses a ringbuffer to read packets from a tcp stream

--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2018"
 [dependencies]
 common = { path = "../common" }
 log = "0.4"
+ringbuf = "0.2.4"
 tonic = "0.4"
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
