--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -11,4 +11,6 @@ log = "0.4"
 ringbuf = "0.2.4"
 tonic = "0.4"
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
+tokio-stream = "0.1"
 futures = "0.3"
+async-stream = "0.3"
