--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,6 +15,9 @@ prost-types = "0.7"
 futures = "0.3.14"
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
 tokio-stream = "0.1.5"
+num = "0.4"
+num-traits = "0.2"
+num-derive = "0.3"
 
 [build-dependencies]
 tonic-build = "0.4"
