--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -19,7 +19,7 @@ tokio-stream = "0.1.5"
 num = "0.4"
 num-traits = "0.2"
 num-derive = "0.3"
-
+bytes = "1.0.1"
 
 [build-dependencies]
 tonic-build = "0.4"
