Renamed gens to data. This is more accurate, as I plan to move a lot of the processing into runtime, instead of at compile time. Generating large source files makes compile times very slow

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "gens/minecraft-data"]
 	path = gens/minecraft-data
 	url = https://github.com/PrismarineJS/minecraft-data
+[submodule "data/minecraft-data"]
+	path = data/minecraft-data
+	url = https://github.com/PrismarineJS/minecraft-data
