--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 common = { path = "../common" }
+data = { path = "../data" }
 log = "0.4"
 ringbuf = "0.2.4"
 tonic = "0.4"
@@ -14,6 +15,7 @@ tokio = { version = "1.5", features = ["rt-multi-thread"] }
 tokio-stream = "0.1"
 futures = "0.3"
 async-stream = "0.3"
+serde_json = "1.0"
 
 [build-dependencies]
 data = { path = "../data" }
