--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -19,6 +19,8 @@ tokio-stream = "0.1.5"
 num = "0.4"
 num-traits = "0.2"
 num-derive = "0.3"
+strum = "0.20"
+strum_macros = "0.20"
 bytes = "1.0.1"
 
 [build-dependencies]
