Updated gitlab CI to run cargo test correctly

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,17 @@
-test:
-  stage: test
+stages:
+  - build
+
+rust-latest:
+  stage: build
+  image: rust:latest
   script:
-    - cargo test
+    - cargo build --verbose
+    - cargo test --verbose
+
+rust-nightly:
+  stage: build
+  image: rustlang/rust:nightly
+  script:
+    - cargo build --verbose
+    - cargo test --verbose
+  allow_failure: true
