--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -15,6 +15,8 @@ tokio = { version = "1.5", features = ["rt-multi-thread"] }
 tokio-stream = "0.1"
 futures = "0.3"
 async-stream = "0.3"
+serde = "1.0"
+serde_derive = "1.0"
 serde_json = "1.0"
 md5 = "0.7.0"
 
