--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -19,6 +19,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 md5 = "0.7.0"
+miniz_oxide = "0.4.4"
 
 [build-dependencies]
 data = { path = "../data" }
