--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -18,8 +18,12 @@ async-stream = "0.3"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-md5 = "0.7.0"
 miniz_oxide = "0.4.4"
+
+md5 = "0.7.0"
+rand = "0.8.3"
+rsa = "0.4.0"
+rsa-der = "0.2.1"
 
 [build-dependencies]
 data = { path = "../data" }
