--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -20,6 +20,8 @@ serde_derive = "1.0"
 serde_json = "1.0"
 miniz_oxide = "0.4.4"
 
+aes = "0.7.2"
+cfb8 = "0.7.1"
 md5 = "0.7.0"
 rand = "0.8.3"
 rsa = "0.4.0"
