--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -28,5 +28,7 @@ rsa = "0.4.0"
 rsa-der = "0.2.1"
 sha-1 = "0.9.6"
 
+reqwest = { version = "0.11.3", features = ["json"] }
+
 [build-dependencies]
 data = { path = "../data" }
