--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -24,6 +24,7 @@ num-derive = "0.3"
 strum = "0.20"
 strum_macros = "0.20"
 bytes = "1.0.1"
+rand_core = "0.6.0"
 
 serde = "1.0"
 serde_derive = "1.0"
