--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -31,6 +31,8 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 
+flate2 = "1.0"
+
 [build-dependencies]
 # We need to disable default features, as that uses rustfmt, which is not installed in Docker containers.
 tonic-build = { version = "0.4", default-features = false, features = ["transport", "prost"] }
