--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -36,4 +36,4 @@ flate2 = "1.0"
 [build-dependencies]
 # We need to disable default features, as that uses rustfmt, which is not installed in Docker containers.
 tonic-build = { version = "0.4", default-features = false, features = ["transport", "prost"] }
-data = { path = "../data" }
+data-gen = { path = "../data-gen" }
