--- a/data-gen/Cargo.toml
+++ b/data-gen/Cargo.toml
@@ -1,21 +1,13 @@
 [package]
-name = "data"
+name = "data-gen"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-common = { path = "../common" }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 convert_case = "0.4.0"
 itertools = "0.10.0"
-
-num = "0.4"
-num-traits = "0.2"
-num-derive = "0.3"
-
-[build-dependencies]
-data-gen = { path = "../data-gen" }
