--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,8 +20,7 @@ num-derive = "0.3"
 
 noise = "0.7.0"
 
-rutie = "0.8.2"
-lazy_static = "1.4.0"
+Boa = "0.11.0"
 
 [build-dependencies]
 data = { path = "../data" }
