--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -21,6 +21,7 @@ num-derive = "0.3"
 noise = "0.7.0"
 
 Boa = "0.11.0"
+gc = { version = "0.4.1", features = ["derive"] }
 
 [build-dependencies]
 data = { path = "../data" }
