--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -11,10 +11,6 @@ data = { path = "../data" }
 log = "0.4"
 ringbuf = "0.2.4"
 tonic = "0.4"
-tokio = { version = "1.5", features = ["rt-multi-thread"] }
-tokio-stream = "0.1"
-futures = "0.3"
-async-stream = "0.3"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
@@ -29,6 +25,12 @@ rsa-der = "0.2.1"
 sha-1 = "0.9.6"
 
 reqwest = { version = "0.11.3", features = ["json"] }
+
+tokio = { version = "1.5", features = ["rt-multi-thread"] }
+tokio-stream = "0.1"
+futures = "0.3"
+async-stream = "0.3"
+async-trait = "0.1.50"
 
 [build-dependencies]
 data = { path = "../data" }
