--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -21,6 +21,8 @@ winit = "0.24"
 vulkano = "0.23"
 vulkano-win = "0.23"
 vulkano-shaders = "0.23"
+imgui = "0.7.0"
+imgui-vulkano-renderer = "0.7.0"
 
 [build-dependencies]
 data = { path = "../data" }
