Can render an image, but the triangle with that image only shows up sometimes

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -22,5 +22,7 @@ vulkano = "0.23"
 vulkano-win = "0.23"
 vulkano-shaders = "0.23"
 
+png = "0.16.8"
+
 [build-dependencies]
 data = { path = "../data" }
