Added a font renderer, and rusttype. Not functional yet

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -23,6 +23,7 @@ vulkano-win = "0.23"
 vulkano-shaders = "0.23"
 
 png = "0.16.8"
+rusttype = { version = "0.9", features = ["gpu_cache"] }
 
 [build-dependencies]
 data = { path = "../data" }
