--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -33,7 +33,12 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 
+async-trait = "0.1.50"
+cfb8 = "0.7.1"
+aes = "0.7.2"
+miniz_oxide = "0.4.4"
 flate2 = "1.0"
+ringbuf = "0.2.4"
 
 [build-dependencies]
 # We need to disable default features, as that uses rustfmt, which is not installed in Docker containers.
