--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -25,5 +25,7 @@ vulkano-shaders = "0.23"
 png = "0.16.8"
 rusttype = { version = "0.9" }
 
+rsa-der = "0.2.1"
+
 [build-dependencies]
 data = { path = "../data" }
