--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -25,6 +25,8 @@ vulkano-shaders = "0.23"
 png = "0.16.8"
 rusttype = { version = "0.9" }
 
+rand = "0.8.3"
+rsa = "0.4.0"
 rsa-der = "0.2.1"
 
 [build-dependencies]
