--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -20,6 +20,8 @@ futures = "0.3.14"
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
 tokio-stream = "0.1.5"
 
+asn1 = "0.5.3"
+rsa = "0.4.0"
 num = "0.4"
 num-traits = "0.2"
 num-derive = "0.3"
