--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -27,6 +27,8 @@ rusttype = { version = "0.9" }
 
 rand = "0.8.3"
 rsa = "0.4.0"
+sha-1 = "0.9.6"
+reqwest = { version = "0.11.3", features = ["json"] }
 
 [build-dependencies]
 data = { path = "../data" }
