--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -30,5 +30,7 @@ rsa = "0.4.0"
 sha-1 = "0.9.6"
 reqwest = { version = "0.11.3", features = ["json"] }
 
+directories = "3.0.2"
+
 [build-dependencies]
 data = { path = "../data" }
