--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 [dependencies]
 log = "0.4"
 common = { path = "../common" }
+data = { path = "../data" }
 
 futures = "0.3.14"
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
