--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -30,6 +30,7 @@ rand = "0.8.3"
 rsa = "0.4.0"
 sha-1 = "0.9.6"
 reqwest = { version = "0.11.3", features = ["json"] }
+cgmath = "0.18.0"
 
 directories = "3.0.2"
 
