--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -17,6 +17,8 @@ tokio-stream = "0.1.5"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+num-traits = "0.2"
+num-derive = "0.3"
 
 winit = "0.24"
 vulkano = "0.23"
