--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -48,3 +48,10 @@ ringbuf = "0.2.4"
 # We need to disable default features, as that uses rustfmt, which is not installed in Docker containers.
 tonic-build = { version = "0.4", default-features = false, features = ["transport", "prost"] }
 data = { path = "../data" }
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "chunk"
+harness = false
