--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -32,6 +32,7 @@ strum_macros = "0.20"
 bytes = "1.0.1"
 rand_core = "0.6.0"
 rand = "0.8.0"
+wyhash = "0.5.0"
 
 serde = "1.0"
 serde_derive = "1.0"
