--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+sc_macros = { path = "../sc_macros" }
+
 # flexi_logger = "0.17"
 log4rs = "1.0.0"
 anyhow = "1.0.0"
