--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -23,6 +23,7 @@ prost-types = "0.8"
 futures = "0.3.14"
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
 tokio-stream = "0.1.5"
+rayon = "1.5.1"
 
 num = "0.4"
 num-traits = "0.2"
