--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -31,7 +31,7 @@ num-derive = "0.3"
 
 noise = "0.7.0"
 
-sugarlang = { git = "https://gitlab.com/macmv/sugarlang" }
+sugarlang = { git = "https://gitlab.com/macmv/sugarlang", features = ["docs"] }
 
 [build-dependencies]
 data = { path = "../data" }
