Added a new crate named 'generated', which will store all generated data. This makes rebuilding common faster

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/main.rs"
 
 [dependencies]
 common = { path = "../common" }
+generated = { path = "../generated" }
 log = "0.4"
 
 tonic = "0.5"
