Changed proxy into a library (easier to benchmark)

--- a/sc_proxy/Cargo.toml
+++ b/sc_proxy/Cargo.toml
@@ -3,6 +3,14 @@ name = "sc_proxy"
 version = "0.1.1"
 edition = "2018"
 
+[lib]
+name = "sc_proxy"
+path = "src/lib.rs"
+
+[[bin]]
+name = "sc_proxy"
+path = "src/main.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
