--- a/sc_cli/Cargo.toml
+++ b/sc_cli/Cargo.toml
@@ -10,10 +10,15 @@ sc_proxy = { path = "../sc_proxy" }
 sc_common = { path = "../sc_common" }
 log = "0.4"
 
+# auth
 rand = "0.8.3"
 rsa = "0.4.0"
 
+# async nonsense
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
 tokio-stream = "0.1"
 futures = "0.3"
 async-stream = "0.3"
+
+# for the cli
+rustyline = "8.2.0"
