--- a/sc_proxy/Cargo.toml
+++ b/sc_proxy/Cargo.toml
@@ -33,6 +33,7 @@ tokio-stream = "0.1"
 futures = "0.3"
 async-stream = "0.3"
 parking_lot = "0.11.2"
+mio = "0.7.13"
 
 # For icon.png
 image = "0.23.14"
