--- a/sc_proxy/Cargo.toml
+++ b/sc_proxy/Cargo.toml
@@ -26,7 +26,7 @@ rand = "0.8.3"
 rsa = "0.4.0"
 sha-1 = "0.9.6"
 
-reqwest = { version = "0.11.3", features = ["json"] }
+reqwest = { version = "0.11.3", features = ["json", "blocking"] }
 
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
 tokio-stream = "0.1"
