--- a/sc_proxy/Cargo.toml
+++ b/sc_proxy/Cargo.toml
@@ -34,6 +34,7 @@ futures = "0.3"
 async-stream = "0.3"
 parking_lot = "0.11.2"
 mio = "0.7.13"
+crossbeam-channel = "0.5.1"
 
 # For icon.png
 image = "0.23.14"
