--- a/sc_cli/Cargo.toml
+++ b/sc_cli/Cargo.toml
@@ -25,6 +25,7 @@ futures = "0.3"
 async-stream = "0.3"
 mio = "0.7.13"
 crossbeam-channel = "0.5.1"
+parking_lot = "0.11.2"
 
 # for the cli
 rustyline = "8.2.0"
