--- a/sc_generated/Cargo.toml
+++ b/sc_generated/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+sc_transfer = { path = "../sc_transfer" }
 
 log = "0.4"
 
