--- a/sc_common/Cargo.toml
+++ b/sc_common/Cargo.toml
@@ -23,6 +23,8 @@ futures = "0.3.14"
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
 tokio-stream = "0.1.5"
 
+crossbeam-channel = "0.5.1"
+
 asn1 = "0.5.3"
 rsa = "0.4.0"
 sha-1 = "0.9.6"
