--- a/sc_common/Cargo.toml
+++ b/sc_common/Cargo.toml
@@ -14,26 +14,20 @@ log4rs = "1.0.0"
 anyhow = "1.0.0"
 log = "0.4"
 
-tonic = "0.5"
-prost = "0.8"
-prost-types = "0.8"
-
-byteorder = "1.4"
-futures = "0.3.14"
-tokio = { version = "1.5", features = ["rt-multi-thread"] }
-tokio-stream = "0.1.5"
 
 crossbeam-channel = "0.5.1"
 
 asn1 = "0.5.3"
 rsa = "0.4.0"
 sha-1 = "0.9.6"
+byteorder = "1.4"
 
 num = "0.4"
 num-traits = "0.2"
 num-derive = "0.3"
 strum = "0.20"
 strum_macros = "0.20"
+
 bytes = "1.0.1"
 rand = "0.8.3"
 rand_core = "0.6.3"
@@ -46,7 +40,7 @@ serde_json = "1.0"
 
 [build-dependencies]
 # We need to disable default features, as that uses rustfmt, which is not installed in Docker containers.
-tonic-build = { version = "0.5", default-features = false, features = ["transport", "prost"] }
+# tonic-build = { version = "0.5", default-features = false, features = ["transport", "prost"] }
 sc_data = { path = "../sc_data" }
 
 [dev-dependencies]
