--- a/sc_generated/Cargo.toml
+++ b/sc_generated/Cargo.toml
@@ -10,9 +10,9 @@ sc_transfer = { path = "../sc_transfer" }
 
 log = "0.4"
 
-tonic = "0.5"
-prost = "0.8"
-prost-types = "0.8"
+# tonic = "0.5"
+# prost = "0.8"
+# prost-types = "0.8"
 
 byteorder = "1.4"
 
@@ -27,7 +27,7 @@ serde = "1.0"
 
 [build-dependencies]
 # We need to disable default features, as that uses rustfmt, which is not installed in Docker containers.
-tonic-build = { version = "0.5", default-features = false, features = ["transport", "prost"] }
+# tonic-build = { version = "0.5", default-features = false, features = ["transport", "prost"] }
 sc_data = { path = "../sc_data" }
 
 [dev-dependencies]
