--- a/sc_common/Cargo.toml
+++ b/sc_common/Cargo.toml
@@ -38,6 +38,9 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 
+# config file
+yaml-rust = "0.4.5"
+
 [build-dependencies]
 # We need to disable default features, as that uses rustfmt, which is not installed in Docker containers.
 # tonic-build = { version = "0.5", default-features = false, features = ["transport", "prost"] }
