--- a/sc_generated/Cargo.toml
+++ b/sc_generated/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 sc_transfer = { path = "../sc_transfer" }
+sc_macros = { path = "../sc_macros" }
 
 log = "0.4"
 
