Created some new files for a generalized protocol. Added a macro for read/write

--- a/sc_common/Cargo.toml
+++ b/sc_common/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+sc_transfer = { path = "../sc_transfer" }
 sc_macros = { path = "../sc_macros" }
 sc_generated = { path = "../sc_generated" }
 
