--- a/sc_proxy/Cargo.toml
+++ b/sc_proxy/Cargo.toml
@@ -30,7 +30,7 @@ sha-1 = "0.9.6"
 ureq = "2.2.0"
 
 parking_lot = "0.11.2"
-mio = "0.7.13"
+mio = { version = "0.7.13", default-features = false, features = ["os-poll", "net"] }
 crossbeam-channel = "0.5.1"
 
 # For icon.png
