--- a/sc_server/Cargo.toml
+++ b/sc_server/Cargo.toml
@@ -35,7 +35,7 @@ sugarlang = { git = "https://gitlab.com/macmv/sugarlang", features = ["docs"] }
 sc_data = { path = "../sc_data" }
 
 [dev-dependencies]
-pprof = { version = "0.4.3", features = ["criterion", "flamegraph"] }
+pprof = { version = "0.4.3", features = ["criterion", "protobuf"] }
 criterion = "0.3.4"
 
 [[bench]]
