--- a/sc_common/Cargo.toml
+++ b/sc_common/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 sc_transfer = { path = "../sc_transfer" }
 sc_macros = { path = "../sc_macros" }
-sc_generated = { path = "../sc_generated" }
+# sc_generated = { path = "../sc_generated" }
 
 # flexi_logger = "0.17"
 log4rs = "1.0.0"
