Commented out tests in gitlab CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,17 +2,17 @@ stages:
   - test
   - deploy
 
-rust-latest-test:
-  stage: test
-  image: rust:latest
-  script:
-    - cargo test --verbose
-
-rust-nightly-test:
-  stage: test
-  image: rustlang/rust:nightly
-  script:
-    - cargo test --verbose
+# rust-latest-test:
+#   stage: test
+#   image: rust:latest
+#   script:
+#     - cargo test --verbose
+#
+# rust-nightly-test:
+#   stage: test
+#   image: rustlang/rust:nightly
+#   script:
+#     - cargo test --verbose
 
 pages:
   stage: deploy
