--- a/sc_proxy/Cargo.toml
+++ b/sc_proxy/Cargo.toml
@@ -42,6 +42,7 @@ aes = "0.7.2"
 miniz_oxide = "0.4.4"
 flate2 = "1.0"
 ringbuf = "0.2.4"
+smallvec = "1.8.0"
 
 [build-dependencies]
 sc_data = { path = "../sc_data" }
