--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.xcf filter=lfs diff=lfs merge=lfs -text
+*.schematic filter=lfs diff=lfs merge=lfs -text
