--- a/sc_common/Cargo.toml
+++ b/sc_common/Cargo.toml
@@ -15,7 +15,6 @@ log4rs = "1.0.0"
 anyhow = "1.0.0"
 log = "0.4"
 
-
 crossbeam-channel = "0.5.1"
 
 asn1 = "0.5.3"
@@ -34,6 +33,7 @@ rand = "0.8.3"
 rand_core = "0.6.3"
 wyhash = "0.5.0"
 num_cpus = "1.13.0"
+flate2 = "1.0"
 
 serde = "1.0"
 serde_derive = "1.0"
