--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,3 @@
 world:
   use-schematic: true
-  schematic-path: "schematics/grassirt.schematic"
+  schematic-path: "schematics/uss-forrestal-cv59-e230.schematic"
