--- a/default.yml
+++ b/default.yml
@@ -1,6 +1,17 @@
 world:
-  use-schematic: false
+  schematic:
+    # If set, then the world will be a void world, and a schematic will be
+    # loaded from the given path on server startup. This overrides any of
+    # the options below.
+    enabled: false
+    # The path to the schematic file.
+    path: ""
+  # If set, then the entire world will be filled with debug blocks.
+  debug: false
+  # If set, the whole world will be void.
   void: false
+  # If not a debug world, and not a void world, then these are the biomes
+  # that will be added to the terrain generation.
   biomes:
     - desert
     - forest
