Added developer notes to README

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 world:
   # locked: true
-  # debug: true
+  debug: true
   schematic:
     enabled: false
     path: "schematics/uss-forrestal-cv59-e230.schematic"
