--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,12 +27,17 @@ pages:
     - cargo install cargo-tarpaulin
     - cargo tarpaulin --out html xml
 
+    # Make our webpage
     - mkdir -p public/
     - rm -rf public/*
     - mkdir -p public/doc/sugarlang/ public/doc/rust
     - cp -r target/sl_docs/* public/doc/sugarlang/
     - cp -r target/doc/* public/doc/rust/
-    - cp tarpaulin-report.html public/tarpaulin-report.html
+
+    # Upload to codecov
+    - curl -Os https://uploader.codecov.io/v0.1.0_4653/linux/codecov
+    - chmod +x codecov
+    - ./codecov -t ${CODECOV_TOKEN}
 
   artifacts:
     paths:
