Can load a 1.8 world from disk

--- a/server.yml
+++ b/server.yml
@@ -1,6 +1,7 @@
 world:
   # locked: true
-  debug: true
+  # debug: true
+  void: true
   schematic:
     enabled: false
     path: "schematics/uss-forrestal-cv59-e230.schematic"
