--- a/sc_server/Cargo.toml
+++ b/sc_server/Cargo.toml
@@ -44,6 +44,10 @@ sugarlang = { git = "https://gitlab.com/macmv/sugarlang", features = ["docs"] }
 # command line args
 clap = { version = "3.0.6", features = ["derive"] }
 
+# plugins
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
 [build-dependencies]
 sc_data = { path = "../sc_data" }
 
