--- a/sc_server/src/default.yml
+++ b/sc_server/src/default.yml
@@ -10,14 +10,27 @@ world:
 
   # Generation settings
 
+  # Vanilla world loading settings
+  vanilla:
+    # If set, then the world will be a void world, and a vanilla world will
+    # be loaded when the server starts. This loads first, so schematics will
+    # replace any blocks set by the vanilla world.
+    enabled: false
+    # The path to the world. This should be a path to a world containing a
+    # `chunks` folder, which should contain all of the chunks of the world.
+    # The value of this path is ignored if vanilla loading is not enabled.
+    path: ""
+
   # Schematic reading settings.
   schematic:
     # If set, then the world will be a void world, and a schematic will be
     # loaded from the given path on server startup. This overrides any of
     # the options below.
     enabled: false
-    # The path to the schematic file.
+    # The path to the schematic file. The value of this path is ignored
+    # if schematic loading is not enabled.
     path: ""
+
   # If set, then the entire world will be filled with debug blocks.
   debug: false
   # If set, the whole world will be void.
