--- a/sc_proxy/Cargo.toml
+++ b/sc_proxy/Cargo.toml
@@ -45,7 +45,7 @@ ringbuf = "0.2.4"
 smallvec = "1.8.0"
 
 # profiling
-pprof = { version = "0.6.1", features = ["protobuf"] }
+pprof = { version = "0.6.1", features = ["protobuf"], optional = true }
 
 [build-dependencies]
 sc_data = { path = "../sc_data" }
