--- a/bb_server/Cargo.toml
+++ b/bb_server/Cargo.toml
@@ -39,7 +39,7 @@ num-derive = "0.3"
 noise = { version = "0.7.0", default-features = false }
 
 # scripting language
-sugarlang = { git = "https://gitlab.com/macmv/sugarlang", features = ["docs"] }
+panda = { git = "https://gitlab.com/macmv/panda", features = ["docs"] }
 
 # command line args
 clap = { version = "3.0.6", features = ["derive"] }
