--- a/bb_server/Cargo.toml
+++ b/bb_server/Cargo.toml
@@ -48,6 +48,9 @@ clap = { version = "3.0.6", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
+# better thread::sleep
+spin_sleep = "1.1.1"
+
 [build-dependencies]
 bb_data = { path = "../bb_data" }
 
