--- a/bb_common/Cargo.toml
+++ b/bb_common/Cargo.toml
@@ -50,6 +50,7 @@ bb_data = { path = "../bb_data" }
 [dev-dependencies]
 pprof = { version = "0.4.3", features = ["criterion", "flamegraph"] }
 criterion = "0.3.4"
+pretty_assertions = "1.2.0"
 
 [[bench]]
 name = "chunk"
