--- a/bb_server/Cargo.toml
+++ b/bb_server/Cargo.toml
@@ -48,9 +48,11 @@ clap = { version = "3.0.6", features = ["derive"] }
 # plugins
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+pyo3 = { version = "0.15.2", features = ["extension-module"], optional = true }
 
 # better thread::sleep
 spin_sleep = "1.1.1"
+
 
 [build-dependencies]
 bb_data = { path = "../bb_data" }
@@ -63,6 +65,7 @@ criterion = "0.3.4"
 default = ["panda_plugins"]
 panda_plugins = ["panda"]
 socket_plugins = []
+python_plugins = ["pyo3"]
 
 [[bench]]
 name = "terrain"
