--- a/bb_server/Cargo.toml
+++ b/bb_server/Cargo.toml
@@ -48,7 +48,7 @@ clap = { version = "3.0.6", features = ["derive"] }
 # plugins
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-pyo3 = { version = "0.15.2", features = ["extension-module"], optional = true }
+pyo3 = { version = "0.16.4", optional = true }
 
 # better thread::sleep
 spin_sleep = "1.1.1"
