--- a/bb_server/Cargo.toml
+++ b/bb_server/Cargo.toml
@@ -31,12 +31,12 @@ parking_lot = "0.12"
 # better errors
 thiserror = "1.0"
 
-# number stuff
+# number stuff. TODO: replace
 num = "0.4"
 num-traits = "0.2"
 num-derive = "0.3"
 
-# noise maps. TODO: Replace
+# noise maps. TODO: replace
 noise = { version = "0.7.0", default-features = false }
 
 # scripting language
@@ -49,6 +49,7 @@ clap = { version = "3.0.6", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 pyo3 = { version = "0.16.4", optional = true }
+wasmer = { version = "2.2.1", optional = true }
 
 # better thread::sleep
 spin_sleep = "1.1.1"
@@ -66,6 +67,7 @@ default = ["panda_plugins"]
 panda_plugins = ["panda"]
 socket_plugins = []
 python_plugins = ["pyo3"]
+wasm_plugins = ["wasmer"]
 
 [[bench]]
 name = "terrain"
