--- a/bb_server/Cargo.toml
+++ b/bb_server/Cargo.toml
@@ -49,6 +49,7 @@ clap = { version = "3.0.6", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 pyo3 = { version = "0.16.4", optional = true }
+bb_ffi = { path = "../bb_ffi" }
 wasmer = { version = "2.2.1", optional = true }
 
 # better thread::sleep
