Added cbindgen to bb_ffi

--- a/bb_ffi/Cargo.toml
+++ b/bb_ffi/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 wasmer-types = { version = "2.2.1", default-features = false, features = ["std"] }
 
 [build-dependencies]
+cbindgen = "0.20.0"
