--- a/bb_server/Cargo.toml
+++ b/bb_server/Cargo.toml
@@ -49,8 +49,8 @@ clap = { version = "3.0.6", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 pyo3 = { version = "0.16.4", optional = true }
-bb_ffi = { path = "../bb_ffi" }
 wasmer = { version = "2.2.1", optional = true }
+bb_ffi = { path = "../bb_ffi", features = ["host"], optional = true }
 
 # better thread::sleep
 spin_sleep = "1.1.1"
@@ -68,7 +68,7 @@ default = ["panda_plugins"]
 panda_plugins = ["panda"]
 socket_plugins = []
 python_plugins = ["pyo3"]
-wasm_plugins = ["wasmer"]
+wasm_plugins = ["wasmer", "bb_ffi"]
 
 [[bench]]
 name = "terrain"
