Added FPos as a yaml value, and added world spawn to config

--- a/examples/combat/server.yml
+++ b/examples/combat/server.yml
@@ -13,6 +13,9 @@ view-distance: 10
 # - spectator (not implemented)
 default-gamemode: survival
 
+# The place where everyone spawns in within the world.
+spawn-point: 0 64 0
+
 # Configs for world generation/loading.
 world:
   # If set, the world cannot be modified. This can be used in minigame
