--- a/bb_server/src/default.yml
+++ b/bb_server/src/default.yml
@@ -16,6 +16,11 @@ default-gamemode: creative
 # The place where everyone spawns in within the world.
 spawn-point: 0 64 0
 
+# If true, the world will search upwards from the given spawn point for a
+# suitable location every time a player is spawned. If false, then the world
+# will simply place new players at the spawn point (even if they suffocate).
+find-spawn: true
+
 # Configs for world generation/loading.
 world:
   # If set, the world cannot be modified. This can be used in minigame
