Panda docs are generated as part of cargo test, so pipeline only needs to create one binary

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ perf.data.old
 
 examples/*/target
 
+# cargo test generates docs, and puts them here.
+bb_server/target
+
 pprof.pb
 
 __pycache__
