--- a/bb_common/Cargo.toml
+++ b/bb_common/Cargo.toml
@@ -40,7 +40,8 @@ serde_derive = "1.0"
 serde_json = "1.0"
 
 # config file
-yaml-rust = "0.4.5"
+#yaml-rust = "0.4.5"
+toml = "0.5"
 
 [build-dependencies]
 # We need to disable default features, as that uses rustfmt, which is not installed in Docker containers.
