Added server.toml and proxy.toml to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,11 @@ perf.data.old
 *-default.yml
 *-default.toml
 
+# User-specific configs should be written here, we don't really want
+# these to get checked in.
+server.toml
+proxy.toml
+
 # a testing world
 /world
 
