--- a/bb_server/src/default.toml
+++ b/bb_server/src/default.toml
@@ -1,3 +1,6 @@
+# Only show info logs by default.
+log-level = "info"
+
 # The default view distance. Note that this can be changed for a single
 # player via a plugin at runtime.
 view-distance = 10
