--- a/bb_server/src/default.toml
+++ b/bb_server/src/default.toml
@@ -1,6 +1,11 @@
 # Only show info logs by default.
 log-level = "info"
 
+# Don't log any packets. This is just for debugging. If you need to debug packets,
+# you can add "all", which will log every packet. You can also add a specific packet
+# name (such as "Flying"), which will only log packets with that name.
+log-packets = []
+
 # The address the server will listen for connections on. Vanilla clients
 # cannot connect to this address! The proxy must be configured to connect
 # to this address instead.
