--- a/bb_server/src/default.toml
+++ b/bb_server/src/default.toml
@@ -34,6 +34,11 @@ spawn-point = { x = 0.0, y = 64.0, z = 0.0 }
 # will simply place new players at the spawn point (even if they suffocate).
 find-spawn = true
 
+# If true, when players join, a chat message will be displayed.
+join-messages = true
+# If true, when a player leaves, a chat message will be displayed.
+leave-messages = true
+
 # Configs for world generation/loading.
 [world]
 # If set, the world cannot be modified. This can be used in minigame
