--- a/bb_server/Cargo.toml
+++ b/bb_server/Cargo.toml
@@ -57,6 +57,8 @@ bb_ffi = { path = "../bb_ffi", features = ["host"], optional = true }
 # better thread::sleep
 spin_sleep = "1.1.1"
 
+# rcon parsing TODO: bb_common::util::Buffer should support little endian
+byteorder = "1.4"
 
 [build-dependencies]
 bb_data = { path = "../bb_data" }
