The bb_plugin crate now handles the #[no_mangle] functions, and exposes a callback that library crates can set

--- a/bb_plugin/Cargo.toml
+++ b/bb_plugin/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 bb_common = { path = "../bb_common", default-features = false }
 bb_ffi = { path = "../bb_ffi" }
 log = "0.4"
+parking_lot = "0.12.0"
 
 [build-dependencies]
