--- a/bb_common/Cargo.toml
+++ b/bb_common/Cargo.toml
@@ -11,9 +11,9 @@ bb_macros = { path = "../bb_macros" }
 # bb_generated = { path = "../bb_generated" }
 
 # flexi_logger = "0.17"
-log4rs = { version = "1.0.0", optional = true }
 anyhow = "1.0.0"
 log = "0.4"
+chrono = { version = "0.4.19", optional = true }
 
 crossbeam-channel = "0.5.1"
 
@@ -55,7 +55,7 @@ pretty_assertions = "1.2.0"
 
 [features]
 default = ["host"]
-host = ["log4rs", "flate2", "rsa", "rand", "rand_core"]
+host = ["chrono", "flate2", "rsa", "rand", "rand_core"]
 
 [[bench]]
 name = "chunk"
