Wasm plugin is now built in release mode, and chunks can be retrieved from the plugin

--- a/plugins/wasm-test/plugin.toml
+++ b/plugins/wasm-test/plugin.toml
@@ -2,5 +2,5 @@ type = "wasm"
 enabled = true
 
 [wasm]
-compile = "cargo build --target wasm32-unknown-unknown"
-output = "target/wasm32-unknown-unknown/debug/wasm_test.wasm"
+compile = "cargo build --target wasm32-unknown-unknown --release"
+output = "target/wasm32-unknown-unknown/release/wasm_test.wasm"
